--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -14,5 +14,9 @@
     "prisma": "^4.9.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
+  },
+  "engines": {
+    "node": "18.x",
+    "yarn": "1.x"
   }
 }
