--- a/packages/database/.env.local
+++ b/packages/database/.env.local
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://root:123@localhost:5432/pgsql?schema=public"
+DATABASE_URL="postgresql://pguser:pgpass@localhost:5432/pgdb?schema=public"
