--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "preview": "prisma studio",
+    "migrate": "prisma migrate dev --name",
+    "seed": "ts-node ./prisma/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -18,5 +20,9 @@
   "engines": {
     "node": "18.x",
     "yarn": "1.x"
+  },
+  "dependencies": {
+    "@prisma/client": "^4.9.0",
+    "csv": "^6.2.6"
   }
 }
