chore: add additional fields to package.json of all projects
adding author, repository, private, etc., and removing unnecessary properties.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
-  "name": "root",
+  "name": "friday-challenge",
   "private": true,
+  "description": "Monorepo of the friday-challenge",
+  "author": "Kauan Schaeffer <kcb.schaeffer@gmail.com>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/K-Schaeffer/friday-challenge"
+  },
   "workspaces": [
     "packages/*"
   ],
