--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -1,16 +1,21 @@
 {
   "name": "database",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "private": true,
+  "description": "Database project of the friday-challenge monorepo",
+  "author": "Kauan Schaeffer <kcb.schaeffer@gmail.com>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/K-Schaeffer/friday-challenge/tree/main/packages/database"
+  },
   "scripts": {
     "preview": "prisma studio",
     "migrate": "prisma migrate dev --name",
     "seed": "ts-node ./prisma/index.ts"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "dependencies": {
+    "@prisma/client": "^4.9.0",
+    "csv": "^6.2.6"
+  },
   "devDependencies": {
     "@types/node": "^18.11.18",
     "prisma": "^4.9.0",
@@ -20,9 +25,5 @@
   "engines": {
     "node": "18.x",
     "yarn": "1.x"
-  },
-  "dependencies": {
-    "@prisma/client": "^4.9.0",
-    "csv": "^6.2.6"
   }
 }
