--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -1,20 +1,26 @@
 {
-  "name": "database",
+  "name": "backend",
   "private": true,
-  "description": "Database project of the friday-challenge monorepo",
+  "version": "0.0.0",
+  "type": "module",
+  "description": "Backend project of the friday-challenge monorepo",
   "author": "Kauan Schaeffer <kcb.schaeffer@gmail.com>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/K-Schaeffer/friday-challenge/tree/main/packages/database"
+    "url": ""
   },
   "scripts": {
     "preview": "prisma studio",
     "migrate": "prisma migrate dev --name",
-    "seed": "ts-node ./prisma/index.ts"
+    "seed": "ts-node ./prisma/index.ts",
+    "compile": "tsc",
+    "start": "npm run compile && node ./dist/src/index.js"
   },
   "dependencies": {
+    "@apollo/server": "^4.3.2",
     "@prisma/client": "^4.9.0",
-    "csv": "^6.2.6"
+    "csv": "^6.2.6",
+    "graphql": "^16.6.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
