--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -10,6 +10,7 @@
     "types": ["node"]
   },
   "ts-node": {
-    "esm": true
+    "esm": true,
+    "experimentalSpecifierResolution": "node"
   }
 }
