chore(frontend): add graphql plugin, vitest ui and msw dependencies

--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -15,7 +15,8 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "test": "vitest run",
-    "testw": "vitest watch",
+    "test:ui": "vitest --ui",
+    "test:watch": "vitest watch",
     "test:coverage": "vitest run --coverage",
     "lint": "eslint --ext .ts,.js,.vue ."
   },
@@ -23,17 +24,20 @@
     "@nuxtjs/apollo": "^5.0.0-alpha.5",
     "@nuxtjs/eslint-config": "^12.0.0",
     "@nuxtjs/tailwindcss": "^6.3.1",
+    "@rollup/plugin-graphql": "^2.0.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^14.4.3",
     "@testing-library/vue": "^6.6.1",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitest/coverage-c8": "^0.28.4",
+    "@vitest/ui": "^0.29.1",
     "eslint": "^8.33.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-nuxt3-auto-import": "git+https://github.com/LuckyWindsck/eslint-plugin-nuxt3-auto-import.git",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vitest-globals": "^1.2.0",
     "jsdom": "^21.1.0",
+    "msw": "^1.1.0",
     "nuxt": "^3.1.2",
     "prettier": "^2.8.3",
     "vitest": "^0.28.4"
